---
title: Diagrama de Classes (UML) — Pacotes, Carteira, Fidelidade e Comissão
---
classDiagram
    direction LR

    class Cliente {
        «ref» núcleo de agendamento
    }
    class Atendimento {
        «ref» núcleo de agendamento
    }
    class Procedimento {
        «ref» núcleo de agendamento
    }
    class Profissional {
        «ref» núcleo de agendamento
    }

    class Pacote {
        +nome: CharField «congelado após a venda»
        +preco_total: Decimal
        +validade_meses: Smallint
        +ativo: Boolean
    }
    class ItemPacote {
        +quantidade_sessoes: Smallint «>0»
        «congelado após a venda»
    }
    class CompraPacote {
        +valor_pago: Decimal «>= 0»
        +status: ATIVO|FINALIZADO|CANCELADO|EXPIRADO
        +data_expiracao: Date
        +saldo_por_procedimento()
        +sessoes_restantes()
        +verificar_finalizacao()
    }
    class ConsumoSessao {
        +criado_em: DateTime
        «1 por atendimento, O2O»
    }
    class Carteira {
        +saldo: Decimal «CHECK >= 0»
    }
    class MovimentoCarteira {
        +tipo: CREDITO|DEBITO
        +origem: CASHBACK_INDICACAO|CASHBACK_ESTORNO|...
        +valor: Decimal
        +saldo_resultante: Decimal
        «ledger imutável por trigger»
    }
    class RegraComissao {
        +percentual: 0..100
        +valor: Decimal
        «percentual XOR valor»
        +ativo: Boolean
    }
    class MovimentoComissao {
        +valor: Decimal
        +status: PENDENTE|PAGA|ESTORNADA
        +pago_em: DateTime
        «1 ativa por atendimento»
    }

    Pacote "1" --> "1..*" ItemPacote : itens
    ItemPacote "0..*" --> "1" Procedimento
    Cliente "1" --> "0..*" CompraPacote : pacotes_comprados (PROTECT)
    Pacote "1" --> "0..*" CompraPacote
    CompraPacote "1" --> "0..*" ConsumoSessao : sessoes_realizadas
    ConsumoSessao "0..1" --> "1" Atendimento : O2O

    Cliente "1" --> "0..1" Carteira : O2O (PROTECT)
    Carteira "1" --> "0..*" MovimentoCarteira : movimentos
    MovimentoCarteira "0..*" --> "0..1" Atendimento

    RegraComissao "0..*" --> "0..1" Profissional
    RegraComissao "0..*" --> "0..1" Procedimento
    Profissional "1" --> "0..*" MovimentoComissao : comissoes
    Atendimento "1" --> "0..*" MovimentoComissao
    MovimentoComissao "0..*" --> "0..1" RegraComissao
